# lustre-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: tree.rs
src/: bounds.rs  bvh.rs  camera.rs  cli.rs  color.rs  hittables.rs  lib.rs  main.rs  material.rs  random.rs  ray.rs  render.rs  scenes.rs  textures.rs  tree.rs  utils.rs
src/hittables/: list.rs  quad.rs  quadbox.rs  sphere.rs  transform.rs  volume.rs
src/textures/: checkered.rs  image.rs  noise.rs
src/utils/: arena.rs  match_opts.rs  progress.rs  random.rs
