[package]
name = "lustre"
version = "0.2.0"
edition = "2021"
authors = ["Nicolas Barios <nbarrios1337@gmail.com>"]
description = "Toy Ray-Tracing Renderer"
repository = "https://github.com/nbarrios1337/lustre-rs"
license = "MIT"
readme = "README.md"
categories = ["rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
glam = { version = "0.22", features = ["debug-glam-assert", "rand"] }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
indicatif = { version = "0.17.1" }
noise = "0.8"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand-wyrand = "0.1.0"
rayon = { version = "1.6.0", optional = true }

[features]
default = ["fast-math", "parallel"]

fast-math = ["glam/fast-math"]
parallel = ["rayon", "indicatif/rayon"]

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.perf]
inherits = "release"
debug = true
